ignore solutions; drop question div

--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@ class: center, middle
 
 ## Dataset terminology
 
-&lt;div class="question"&gt;
-What does each row represent? What does each column represent?
-&lt;/div&gt;
+
+__Question__: What does each row represent? What does each column represent?
+
 
 
 ```r
@@ -262,14 +262,9 @@ Run the following **in the Console** to view the help
 
 ![starwars-help](img/starwars-help.png)
 
-&lt;div class="question"&gt;
-How many rows and columns does this dataset have? 
-&lt;/div&gt;
+__Question__: How many rows and columns does this dataset have? 
 
-
-&lt;div class="question"&gt;
 Make a prediction: What relationship do you expect to see between height and mass?
-&lt;/div&gt;
 
 ---
 
@@ -304,10 +299,11 @@ ggplot(data = starwars) +
 
 ## Mass vs. height
 
-&lt;div class="question"&gt;
-How would you describe this relationship? &lt;/br&gt;
-Who is the not so tall but really chubby character?
-&lt;/div&gt;
+
+__Questions__: 
+- How would you describe this relationship?
+- Who is the not so tall but really chubby character?
+
 
 ![](index_files/figure-html/unnamed-chunk-10-1.png)&lt;!-- --&gt;
 
@@ -362,7 +358,7 @@ ggplot(data = starwars) +
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#ilnmcdzhkf .gt_table {
+#uonsjrppnt .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -385,7 +381,7 @@ ggplot(data = starwars) +
   border-left-color: #D3D3D3;
 }
 
-#ilnmcdzhkf .gt_heading {
+#uonsjrppnt .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -397,7 +393,7 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#ilnmcdzhkf .gt_title {
+#uonsjrppnt .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -407,7 +403,7 @@ ggplot(data = starwars) +
   border-bottom-width: 0;
 }
 
-#ilnmcdzhkf .gt_subtitle {
+#uonsjrppnt .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -417,13 +413,13 @@ ggplot(data = starwars) +
   border-top-width: 0;
 }
 
-#ilnmcdzhkf .gt_bottom_border {
+#uonsjrppnt .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#ilnmcdzhkf .gt_col_headings {
+#uonsjrppnt .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -438,7 +434,7 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#ilnmcdzhkf .gt_col_heading {
+#uonsjrppnt .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -458,7 +454,7 @@ ggplot(data = starwars) +
   overflow-x: hidden;
 }
 
-#ilnmcdzhkf .gt_column_spanner_outer {
+#uonsjrppnt .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -470,15 +466,15 @@ ggplot(data = starwars) +
   padding-right: 4px;
 }
 
-#ilnmcdzhkf .gt_column_spanner_outer:first-child {
+#uonsjrppnt .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#ilnmcdzhkf .gt_column_spanner_outer:last-child {
+#uonsjrppnt .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#ilnmcdzhkf .gt_column_spanner {
+#uonsjrppnt .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -490,7 +486,7 @@ ggplot(data = starwars) +
   width: 100%;
 }
 
-#ilnmcdzhkf .gt_group_heading {
+#uonsjrppnt .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -512,7 +508,7 @@ ggplot(data = starwars) +
   vertical-align: middle;
 }
 
-#ilnmcdzhkf .gt_empty_group_heading {
+#uonsjrppnt .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -527,19 +523,19 @@ ggplot(data = starwars) +
   vertical-align: middle;
 }
 
-#ilnmcdzhkf .gt_striped {
+#uonsjrppnt .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#ilnmcdzhkf .gt_from_md > :first-child {
+#uonsjrppnt .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#ilnmcdzhkf .gt_from_md > :last-child {
+#uonsjrppnt .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#ilnmcdzhkf .gt_row {
+#uonsjrppnt .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -558,7 +554,7 @@ ggplot(data = starwars) +
   overflow-x: hidden;
 }
 
-#ilnmcdzhkf .gt_stub {
+#uonsjrppnt .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -570,7 +566,7 @@ ggplot(data = starwars) +
   padding-left: 12px;
 }
 
-#ilnmcdzhkf .gt_summary_row {
+#uonsjrppnt .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -580,7 +576,7 @@ ggplot(data = starwars) +
   padding-right: 5px;
 }
 
-#ilnmcdzhkf .gt_first_summary_row {
+#uonsjrppnt .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -590,7 +586,7 @@ ggplot(data = starwars) +
   border-top-color: #D3D3D3;
 }
 
-#ilnmcdzhkf .gt_grand_summary_row {
+#uonsjrppnt .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -600,7 +596,7 @@ ggplot(data = starwars) +
   padding-right: 5px;
 }
 
-#ilnmcdzhkf .gt_first_grand_summary_row {
+#uonsjrppnt .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -610,7 +606,7 @@ ggplot(data = starwars) +
   border-top-color: #D3D3D3;
 }
 
-#ilnmcdzhkf .gt_table_body {
+#uonsjrppnt .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -619,7 +615,7 @@ ggplot(data = starwars) +
   border-bottom-color: #D3D3D3;
 }
 
-#ilnmcdzhkf .gt_footnotes {
+#uonsjrppnt .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -633,13 +629,13 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#ilnmcdzhkf .gt_footnote {
+#uonsjrppnt .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#ilnmcdzhkf .gt_sourcenotes {
+#uonsjrppnt .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -653,46 +649,46 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#ilnmcdzhkf .gt_sourcenote {
+#uonsjrppnt .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#ilnmcdzhkf .gt_left {
+#uonsjrppnt .gt_left {
   text-align: left;
 }
 
-#ilnmcdzhkf .gt_center {
+#uonsjrppnt .gt_center {
   text-align: center;
 }
 
-#ilnmcdzhkf .gt_right {
+#uonsjrppnt .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#ilnmcdzhkf .gt_font_normal {
+#uonsjrppnt .gt_font_normal {
   font-weight: normal;
 }
 
-#ilnmcdzhkf .gt_font_bold {
+#uonsjrppnt .gt_font_bold {
   font-weight: bold;
 }
 
-#ilnmcdzhkf .gt_font_italic {
+#uonsjrppnt .gt_font_italic {
   font-style: italic;
 }
 
-#ilnmcdzhkf .gt_super {
+#uonsjrppnt .gt_super {
   font-size: 65%;
 }
 
-#ilnmcdzhkf .gt_footnote_marks {
+#uonsjrppnt .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="ilnmcdzhkf" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="uonsjrppnt" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   
   <thead class="gt_col_headings">
     <tr>
@@ -724,7 +720,7 @@ ggplot(data = starwars) +
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#fiwauebmoe .gt_table {
+#brbdzlkujp .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -747,7 +743,7 @@ ggplot(data = starwars) +
   border-left-color: #D3D3D3;
 }
 
-#fiwauebmoe .gt_heading {
+#brbdzlkujp .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -759,7 +755,7 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#fiwauebmoe .gt_title {
+#brbdzlkujp .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -769,7 +765,7 @@ ggplot(data = starwars) +
   border-bottom-width: 0;
 }
 
-#fiwauebmoe .gt_subtitle {
+#brbdzlkujp .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -779,13 +775,13 @@ ggplot(data = starwars) +
   border-top-width: 0;
 }
 
-#fiwauebmoe .gt_bottom_border {
+#brbdzlkujp .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#fiwauebmoe .gt_col_headings {
+#brbdzlkujp .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -800,7 +796,7 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#fiwauebmoe .gt_col_heading {
+#brbdzlkujp .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -820,7 +816,7 @@ ggplot(data = starwars) +
   overflow-x: hidden;
 }
 
-#fiwauebmoe .gt_column_spanner_outer {
+#brbdzlkujp .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -832,15 +828,15 @@ ggplot(data = starwars) +
   padding-right: 4px;
 }
 
-#fiwauebmoe .gt_column_spanner_outer:first-child {
+#brbdzlkujp .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#fiwauebmoe .gt_column_spanner_outer:last-child {
+#brbdzlkujp .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#fiwauebmoe .gt_column_spanner {
+#brbdzlkujp .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -852,7 +848,7 @@ ggplot(data = starwars) +
   width: 100%;
 }
 
-#fiwauebmoe .gt_group_heading {
+#brbdzlkujp .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -874,7 +870,7 @@ ggplot(data = starwars) +
   vertical-align: middle;
 }
 
-#fiwauebmoe .gt_empty_group_heading {
+#brbdzlkujp .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -889,19 +885,19 @@ ggplot(data = starwars) +
   vertical-align: middle;
 }
 
-#fiwauebmoe .gt_striped {
+#brbdzlkujp .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#fiwauebmoe .gt_from_md > :first-child {
+#brbdzlkujp .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#fiwauebmoe .gt_from_md > :last-child {
+#brbdzlkujp .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#fiwauebmoe .gt_row {
+#brbdzlkujp .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -920,7 +916,7 @@ ggplot(data = starwars) +
   overflow-x: hidden;
 }
 
-#fiwauebmoe .gt_stub {
+#brbdzlkujp .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -932,7 +928,7 @@ ggplot(data = starwars) +
   padding-left: 12px;
 }
 
-#fiwauebmoe .gt_summary_row {
+#brbdzlkujp .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -942,7 +938,7 @@ ggplot(data = starwars) +
   padding-right: 5px;
 }
 
-#fiwauebmoe .gt_first_summary_row {
+#brbdzlkujp .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -952,7 +948,7 @@ ggplot(data = starwars) +
   border-top-color: #D3D3D3;
 }
 
-#fiwauebmoe .gt_grand_summary_row {
+#brbdzlkujp .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -962,7 +958,7 @@ ggplot(data = starwars) +
   padding-right: 5px;
 }
 
-#fiwauebmoe .gt_first_grand_summary_row {
+#brbdzlkujp .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -972,7 +968,7 @@ ggplot(data = starwars) +
   border-top-color: #D3D3D3;
 }
 
-#fiwauebmoe .gt_table_body {
+#brbdzlkujp .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -981,7 +977,7 @@ ggplot(data = starwars) +
   border-bottom-color: #D3D3D3;
 }
 
-#fiwauebmoe .gt_footnotes {
+#brbdzlkujp .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -995,13 +991,13 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#fiwauebmoe .gt_footnote {
+#brbdzlkujp .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#fiwauebmoe .gt_sourcenotes {
+#brbdzlkujp .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1015,46 +1011,46 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#fiwauebmoe .gt_sourcenote {
+#brbdzlkujp .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#fiwauebmoe .gt_left {
+#brbdzlkujp .gt_left {
   text-align: left;
 }
 
-#fiwauebmoe .gt_center {
+#brbdzlkujp .gt_center {
   text-align: center;
 }
 
-#fiwauebmoe .gt_right {
+#brbdzlkujp .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#fiwauebmoe .gt_font_normal {
+#brbdzlkujp .gt_font_normal {
   font-weight: normal;
 }
 
-#fiwauebmoe .gt_font_bold {
+#brbdzlkujp .gt_font_bold {
   font-weight: bold;
 }
 
-#fiwauebmoe .gt_font_italic {
+#brbdzlkujp .gt_font_italic {
   font-style: italic;
 }
 
-#fiwauebmoe .gt_super {
+#brbdzlkujp .gt_super {
   font-size: 65%;
 }
 
-#fiwauebmoe .gt_footnote_marks {
+#brbdzlkujp .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="fiwauebmoe" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="brbdzlkujp" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   
   <thead class="gt_col_headings">
     <tr>
@@ -1079,6 +1075,14 @@ ggplot(data = starwars) +
   
   
 </table></div>
+
+---
+
+## Your turn
+
+- Switch to Rstudio cloud and find the data visualization basics project. 
+
+- Work on completing the problems in `exercises.Rmd` with your teammates.
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
