--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ class: center, middle, inverse, title-slide
 # Data visualization basics
 ## Introduction to ggplot2
 ### Byron C. Jaeger
-### last updated: 2020-04-06
+### last updated: 2020-04-07
 
 ---
 
@@ -358,7 +358,7 @@ ggplot(data = starwars) +
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#uonsjrppnt .gt_table {
+#hanoxednaj .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -381,7 +381,7 @@ ggplot(data = starwars) +
   border-left-color: #D3D3D3;
 }
 
-#uonsjrppnt .gt_heading {
+#hanoxednaj .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -393,7 +393,7 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#uonsjrppnt .gt_title {
+#hanoxednaj .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -403,7 +403,7 @@ ggplot(data = starwars) +
   border-bottom-width: 0;
 }
 
-#uonsjrppnt .gt_subtitle {
+#hanoxednaj .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -413,13 +413,13 @@ ggplot(data = starwars) +
   border-top-width: 0;
 }
 
-#uonsjrppnt .gt_bottom_border {
+#hanoxednaj .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#uonsjrppnt .gt_col_headings {
+#hanoxednaj .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -434,7 +434,7 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#uonsjrppnt .gt_col_heading {
+#hanoxednaj .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -454,7 +454,7 @@ ggplot(data = starwars) +
   overflow-x: hidden;
 }
 
-#uonsjrppnt .gt_column_spanner_outer {
+#hanoxednaj .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -466,15 +466,15 @@ ggplot(data = starwars) +
   padding-right: 4px;
 }
 
-#uonsjrppnt .gt_column_spanner_outer:first-child {
+#hanoxednaj .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#uonsjrppnt .gt_column_spanner_outer:last-child {
+#hanoxednaj .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#uonsjrppnt .gt_column_spanner {
+#hanoxednaj .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -486,7 +486,7 @@ ggplot(data = starwars) +
   width: 100%;
 }
 
-#uonsjrppnt .gt_group_heading {
+#hanoxednaj .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -508,7 +508,7 @@ ggplot(data = starwars) +
   vertical-align: middle;
 }
 
-#uonsjrppnt .gt_empty_group_heading {
+#hanoxednaj .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -523,19 +523,19 @@ ggplot(data = starwars) +
   vertical-align: middle;
 }
 
-#uonsjrppnt .gt_striped {
+#hanoxednaj .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#uonsjrppnt .gt_from_md > :first-child {
+#hanoxednaj .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#uonsjrppnt .gt_from_md > :last-child {
+#hanoxednaj .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#uonsjrppnt .gt_row {
+#hanoxednaj .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -554,7 +554,7 @@ ggplot(data = starwars) +
   overflow-x: hidden;
 }
 
-#uonsjrppnt .gt_stub {
+#hanoxednaj .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -566,7 +566,7 @@ ggplot(data = starwars) +
   padding-left: 12px;
 }
 
-#uonsjrppnt .gt_summary_row {
+#hanoxednaj .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -576,7 +576,7 @@ ggplot(data = starwars) +
   padding-right: 5px;
 }
 
-#uonsjrppnt .gt_first_summary_row {
+#hanoxednaj .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -586,7 +586,7 @@ ggplot(data = starwars) +
   border-top-color: #D3D3D3;
 }
 
-#uonsjrppnt .gt_grand_summary_row {
+#hanoxednaj .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -596,7 +596,7 @@ ggplot(data = starwars) +
   padding-right: 5px;
 }
 
-#uonsjrppnt .gt_first_grand_summary_row {
+#hanoxednaj .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -606,7 +606,7 @@ ggplot(data = starwars) +
   border-top-color: #D3D3D3;
 }
 
-#uonsjrppnt .gt_table_body {
+#hanoxednaj .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -615,7 +615,7 @@ ggplot(data = starwars) +
   border-bottom-color: #D3D3D3;
 }
 
-#uonsjrppnt .gt_footnotes {
+#hanoxednaj .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -629,13 +629,13 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#uonsjrppnt .gt_footnote {
+#hanoxednaj .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#uonsjrppnt .gt_sourcenotes {
+#hanoxednaj .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -649,46 +649,46 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#uonsjrppnt .gt_sourcenote {
+#hanoxednaj .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#uonsjrppnt .gt_left {
+#hanoxednaj .gt_left {
   text-align: left;
 }
 
-#uonsjrppnt .gt_center {
+#hanoxednaj .gt_center {
   text-align: center;
 }
 
-#uonsjrppnt .gt_right {
+#hanoxednaj .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#uonsjrppnt .gt_font_normal {
+#hanoxednaj .gt_font_normal {
   font-weight: normal;
 }
 
-#uonsjrppnt .gt_font_bold {
+#hanoxednaj .gt_font_bold {
   font-weight: bold;
 }
 
-#uonsjrppnt .gt_font_italic {
+#hanoxednaj .gt_font_italic {
   font-style: italic;
 }
 
-#uonsjrppnt .gt_super {
+#hanoxednaj .gt_super {
   font-size: 65%;
 }
 
-#uonsjrppnt .gt_footnote_marks {
+#hanoxednaj .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="uonsjrppnt" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="hanoxednaj" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   
   <thead class="gt_col_headings">
     <tr>
@@ -720,7 +720,7 @@ ggplot(data = starwars) +
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#brbdzlkujp .gt_table {
+#kzhdpenkwn .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -743,7 +743,7 @@ ggplot(data = starwars) +
   border-left-color: #D3D3D3;
 }
 
-#brbdzlkujp .gt_heading {
+#kzhdpenkwn .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -755,7 +755,7 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#brbdzlkujp .gt_title {
+#kzhdpenkwn .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -765,7 +765,7 @@ ggplot(data = starwars) +
   border-bottom-width: 0;
 }
 
-#brbdzlkujp .gt_subtitle {
+#kzhdpenkwn .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -775,13 +775,13 @@ ggplot(data = starwars) +
   border-top-width: 0;
 }
 
-#brbdzlkujp .gt_bottom_border {
+#kzhdpenkwn .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#brbdzlkujp .gt_col_headings {
+#kzhdpenkwn .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -796,7 +796,7 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#brbdzlkujp .gt_col_heading {
+#kzhdpenkwn .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -816,7 +816,7 @@ ggplot(data = starwars) +
   overflow-x: hidden;
 }
 
-#brbdzlkujp .gt_column_spanner_outer {
+#kzhdpenkwn .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -828,15 +828,15 @@ ggplot(data = starwars) +
   padding-right: 4px;
 }
 
-#brbdzlkujp .gt_column_spanner_outer:first-child {
+#kzhdpenkwn .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#brbdzlkujp .gt_column_spanner_outer:last-child {
+#kzhdpenkwn .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#brbdzlkujp .gt_column_spanner {
+#kzhdpenkwn .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -848,7 +848,7 @@ ggplot(data = starwars) +
   width: 100%;
 }
 
-#brbdzlkujp .gt_group_heading {
+#kzhdpenkwn .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -870,7 +870,7 @@ ggplot(data = starwars) +
   vertical-align: middle;
 }
 
-#brbdzlkujp .gt_empty_group_heading {
+#kzhdpenkwn .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -885,19 +885,19 @@ ggplot(data = starwars) +
   vertical-align: middle;
 }
 
-#brbdzlkujp .gt_striped {
+#kzhdpenkwn .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#brbdzlkujp .gt_from_md > :first-child {
+#kzhdpenkwn .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#brbdzlkujp .gt_from_md > :last-child {
+#kzhdpenkwn .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#brbdzlkujp .gt_row {
+#kzhdpenkwn .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -916,7 +916,7 @@ ggplot(data = starwars) +
   overflow-x: hidden;
 }
 
-#brbdzlkujp .gt_stub {
+#kzhdpenkwn .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -928,7 +928,7 @@ ggplot(data = starwars) +
   padding-left: 12px;
 }
 
-#brbdzlkujp .gt_summary_row {
+#kzhdpenkwn .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -938,7 +938,7 @@ ggplot(data = starwars) +
   padding-right: 5px;
 }
 
-#brbdzlkujp .gt_first_summary_row {
+#kzhdpenkwn .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -948,7 +948,7 @@ ggplot(data = starwars) +
   border-top-color: #D3D3D3;
 }
 
-#brbdzlkujp .gt_grand_summary_row {
+#kzhdpenkwn .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -958,7 +958,7 @@ ggplot(data = starwars) +
   padding-right: 5px;
 }
 
-#brbdzlkujp .gt_first_grand_summary_row {
+#kzhdpenkwn .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -968,7 +968,7 @@ ggplot(data = starwars) +
   border-top-color: #D3D3D3;
 }
 
-#brbdzlkujp .gt_table_body {
+#kzhdpenkwn .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -977,7 +977,7 @@ ggplot(data = starwars) +
   border-bottom-color: #D3D3D3;
 }
 
-#brbdzlkujp .gt_footnotes {
+#kzhdpenkwn .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -991,13 +991,13 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#brbdzlkujp .gt_footnote {
+#kzhdpenkwn .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#brbdzlkujp .gt_sourcenotes {
+#kzhdpenkwn .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1011,46 +1011,46 @@ ggplot(data = starwars) +
   border-right-color: #D3D3D3;
 }
 
-#brbdzlkujp .gt_sourcenote {
+#kzhdpenkwn .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#brbdzlkujp .gt_left {
+#kzhdpenkwn .gt_left {
   text-align: left;
 }
 
-#brbdzlkujp .gt_center {
+#kzhdpenkwn .gt_center {
   text-align: center;
 }
 
-#brbdzlkujp .gt_right {
+#kzhdpenkwn .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#brbdzlkujp .gt_font_normal {
+#kzhdpenkwn .gt_font_normal {
   font-weight: normal;
 }
 
-#brbdzlkujp .gt_font_bold {
+#kzhdpenkwn .gt_font_bold {
   font-weight: bold;
 }
 
-#brbdzlkujp .gt_font_italic {
+#kzhdpenkwn .gt_font_italic {
   font-style: italic;
 }
 
-#brbdzlkujp .gt_super {
+#kzhdpenkwn .gt_super {
   font-size: 65%;
 }
 
-#brbdzlkujp .gt_footnote_marks {
+#kzhdpenkwn .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="brbdzlkujp" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="kzhdpenkwn" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   
   <thead class="gt_col_headings">
     <tr>
